adjusted some default behaviour